# pckupd

./: .gitmodules  AUTHORS  Makefile.am  configure.ac
po/: POTFILES.in
